--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <source type="audio/ogg" class="playAudio" src="">
         </audio>
         <div class="container">
-            
+            <h1>My-Dictionary</h1>
             <div class="search--box">
                 <input type="text" placeholder="search for a word" id="searchedWord">
                 <button class="searchDefinition">&#128269</button>
